.config/logs/2019.12.18/16.52.31.147337.log
2019-12-18 16:52:31,152 DEBUG    root            Loaded Command Group: [u'gcloud', u'components']
2019-12-18 16:52:31,155 DEBUG    root            Loaded Command Group: [u'gcloud', u'components', u'update']
2019-12-18 16:52:31,161 DEBUG    root            Running [gcloud.components.update] with arguments: [--quiet: "True", COMPONENT-IDS:8: "[u'gcloud', u'core', u'bq', u'gsutil', u'compute', u'preview', u'alpha', u'beta']"]
2019-12-18 16:52:31,212 WARNING  root            Component [preview] no longer exists.
2019-12-18 16:52:31,212 WARNING  root            Component [compute] no longer exists.
2019-12-18 16:52:31,214 INFO     ___FILE_ONLY___ 

2019-12-18 16:52:31,214 INFO     ___FILE_ONLY___ 
Your current Cloud SDK version is: 274.0.0

2019-12-18 16:52:31,214 INFO     ___FILE_ONLY___ Installing components from version: 274.0.0

2019-12-18 16:52:31,214 INFO     ___FILE_ONLY___ 

2019-12-18 16:52:31,219 INFO     ___FILE_ONLY___ +----------------------------------------------+
2019-12-18 16:52:31,219 INFO     ___FILE_ONLY___ 

2019-12-18 16:52:31,219 INFO     ___FILE_ONLY___ |     These components will be installed.      |
2019-12-18 16:52:31,219 INFO     ___FILE_ONLY___ 

2019-12-18 16:52:31,219 INFO     ___FILE_ONLY___ +-----------------------+------------+---------+
2019-12-18 16:52:31,220 INFO     ___FILE_ONLY___ 

2019-12-18 16:52:31,220 INFO     ___FILE_ONLY___ |          Name         |  Version   |   Size  |
2019-12-18 16:52:31,220 INFO     ___FILE_ONLY___ 

2019-12-18 16:52:31,220 INFO     ___FILE_ONLY___ +-----------------------+------------+---------+
2019-12-18 16:52:31,220 INFO     ___FILE_ONLY___ 

2019-12-18 16:52:31,220 INFO     ___FILE_ONLY___ | 
2019-12-18 16:52:31,220 INFO     ___FILE_ONLY___ gcloud Alpha Commands
2019-12-18 16:52:31,221 INFO     ___FILE_ONLY___  
2019-12-18 16:52:31,221 INFO     ___FILE_ONLY___ | 
2019-12-18 16:52:31,221 INFO     ___FILE_ONLY___ 2019.05.17
2019-12-18 16:52:31,221 INFO     ___FILE_ONLY___  
2019-12-18 16:52:31,221 INFO     ___FILE_ONLY___ | 
2019-12-18 16:52:31,221 INFO     ___FILE_ONLY___ < 1 MiB
2019-12-18 16:52:31,221 INFO     ___FILE_ONLY___  
2019-12-18 16:52:31,222 INFO     ___FILE_ONLY___ |
2019-12-18 16:52:31,222 INFO     ___FILE_ONLY___ 

2019-12-18 16:52:31,222 INFO     ___FILE_ONLY___ | 
2019-12-18 16:52:31,222 INFO     ___FILE_ONLY___ gcloud Beta Commands 
2019-12-18 16:52:31,222 INFO     ___FILE_ONLY___  
2019-12-18 16:52:31,222 INFO     ___FILE_ONLY___ | 
2019-12-18 16:52:31,222 INFO     ___FILE_ONLY___ 2019.05.17
2019-12-18 16:52:31,223 INFO     ___FILE_ONLY___  
2019-12-18 16:52:31,223 INFO     ___FILE_ONLY___ | 
2019-12-18 16:52:31,223 INFO     ___FILE_ONLY___ < 1 MiB
2019-12-18 16:52:31,223 INFO     ___FILE_ONLY___  
2019-12-18 16:52:31,223 INFO     ___FILE_ONLY___ |
2019-12-18 16:52:31,223 INFO     ___FILE_ONLY___ 

2019-12-18 16:52:31,223 INFO     ___FILE_ONLY___ +-----------------------+------------+---------+
2019-12-18 16:52:31,223 INFO     ___FILE_ONLY___ 

2019-12-18 16:52:31,224 INFO     ___FILE_ONLY___ 

2019-12-18 16:52:31,252 INFO     ___FILE_ONLY___ For the latest full release notes, please visit:
  https://cloud.google.com/sdk/release_notes


2019-12-18 16:52:31,257 INFO     ___FILE_ONLY___ #============================================================#

2019-12-18 16:52:31,258 INFO     ___FILE_ONLY___ #= Creating update staging area                             =#

2019-12-18 16:52:31,258 INFO     ___FILE_ONLY___ #
2019-12-18 16:52:31,258 INFO     ___FILE_ONLY___ ======
2019-12-18 16:52:31,569 INFO     ___FILE_ONLY___ ======
2019-12-18 16:52:31,569 INFO     ___FILE_ONLY___ ======
2019-12-18 16:52:31,731 INFO     ___FILE_ONLY___ =
2019-12-18 16:52:31,778 INFO     ___FILE_ONLY___ =
2019-12-18 16:52:31,840 INFO     ___FILE_ONLY___ =
2019-12-18 16:52:31,885 INFO     ___FILE_ONLY___ =
2019-12-18 16:52:31,933 INFO     ___FILE_ONLY___ =
2019-12-18 16:52:31,995 INFO     ___FILE_ONLY___ =
2019-12-18 16:52:32,037 INFO     ___FILE_ONLY___ =
2019-12-18 16:52:32,081 INFO     ___FILE_ONLY___ =
2019-12-18 16:52:32,126 INFO     ___FILE_ONLY___ =
2019-12-18 16:52:32,171 INFO     ___FILE_ONLY___ =
2019-12-18 16:52:32,213 INFO     ___FILE_ONLY___ =
2019-12-18 16:52:32,250 INFO     ___FILE_ONLY___ =
2019-12-18 16:52:32,278 INFO     ___FILE_ONLY___ =
2019-12-18 16:52:32,321 INFO     ___FILE_ONLY___ =
2019-12-18 16:52:32,378 INFO     ___FILE_ONLY___ =
2019-12-18 16:52:32,419 INFO     ___FILE_ONLY___ =
2019-12-18 16:52:32,468 INFO     ___FILE_ONLY___ =
2019-12-18 16:52:32,508 INFO     ___FILE_ONLY___ =
2019-12-18 16:52:32,571 INFO     ___FILE_ONLY___ =
2019-12-18 16:52:32,626 INFO     ___FILE_ONLY___ =
2019-12-18 16:52:32,676 INFO     ___FILE_ONLY___ =
2019-12-18 16:52:32,715 INFO     ___FILE_ONLY___ =
2019-12-18 16:52:32,756 INFO     ___FILE_ONLY___ =
2019-12-18 16:52:32,801 INFO     ___FILE_ONLY___ =
2019-12-18 16:52:32,851 INFO     ___FILE_ONLY___ =
2019-12-18 16:52:32,888 INFO     ___FILE_ONLY___ =
2019-12-18 16:52:32,936 INFO     ___FILE_ONLY___ =
2019-12-18 16:52:33,162 INFO     ___FILE_ONLY___ =
2019-12-18 16:52:33,237 INFO     ___FILE_ONLY___ =
2019-12-18 16:52:33,319 INFO     ___FILE_ONLY___ =
2019-12-18 16:52:33,436 INFO     ___FILE_ONLY___ =
2019-12-18 16:52:33,541 INFO     ___FILE_ONLY___ =
2019-12-18 16:52:33,564 INFO     ___FILE_ONLY___ =
2019-12-18 16:52:33,612 INFO     ___FILE_ONLY___ =
2019-12-18 16:52:33,664 INFO     ___FILE_ONLY___ =
2019-12-18 16:52:33,700 INFO     ___FILE_ONLY___ =
2019-12-18 16:52:33,786 INFO     ___FILE_ONLY___ =
2019-12-18 16:52:33,846 INFO     ___FILE_ONLY___ =
2019-12-18 16:52:33,904 INFO     ___FILE_ONLY___ =
2019-12-18 16:52:33,940 INFO     ___FILE_ONLY___ =
2019-12-18 16:52:33,987 INFO     ___FILE_ONLY___ =
2019-12-18 16:52:34,051 INFO     ___FILE_ONLY___ =
2019-12-18 16:52:34,051 INFO     ___FILE_ONLY___ #

2019-12-18 16:52:34,064 INFO     ___FILE_ONLY___ #= Installing: gcloud Alpha Commands                        =#

2019-12-18 16:52:34,065 INFO     ___FILE_ONLY___ #
2019-12-18 16:52:34,091 INFO     ___FILE_ONLY___ ==============================
2019-12-18 16:52:34,092 INFO     ___FILE_ONLY___ =======
2019-12-18 16:52:34,093 INFO     ___FILE_ONLY___ ========
2019-12-18 16:52:34,093 INFO     ___FILE_ONLY___ =======
2019-12-18 16:52:34,093 INFO     ___FILE_ONLY___ ========
2019-12-18 16:52:34,094 INFO     ___FILE_ONLY___ #

2019-12-18 16:52:34,103 INFO     ___FILE_ONLY___ #= Installing: gcloud Beta Commands                         =#

2019-12-18 16:52:34,103 INFO     ___FILE_ONLY___ #
2019-12-18 16:52:34,121 INFO     ___FILE_ONLY___ ==============================
2019-12-18 16:52:34,122 INFO     ___FILE_ONLY___ =======
2019-12-18 16:52:34,122 INFO     ___FILE_ONLY___ ========
2019-12-18 16:52:34,122 INFO     ___FILE_ONLY___ =======
2019-12-18 16:52:34,123 INFO     ___FILE_ONLY___ ========
2019-12-18 16:52:34,123 INFO     ___FILE_ONLY___ #

2019-12-18 16:52:34,131 INFO     ___FILE_ONLY___ #= Creating backup and activating new installation          =#

2019-12-18 16:52:34,132 INFO     ___FILE_ONLY___ #
2019-12-18 16:52:34,132 DEBUG    root            Attempting to move directory [/tools/google-cloud-sdk] to [/tools/google-cloud-sdk.staging/.install/.backup]
2019-12-18 16:52:34,132 INFO     ___FILE_ONLY___ ==============================
2019-12-18 16:52:34,132 DEBUG    root            Attempting to move directory [/tools/google-cloud-sdk.staging] to [/tools/google-cloud-sdk]
2019-12-18 16:52:34,132 INFO     ___FILE_ONLY___ ==============================
2019-12-18 16:52:34,133 INFO     ___FILE_ONLY___ #

2019-12-18 16:52:34,138 DEBUG    root            Updating notification cache...
2019-12-18 16:52:34,138 INFO     ___FILE_ONLY___ 

2019-12-18 16:52:34,142 INFO     ___FILE_ONLY___ Performing post processing steps...
2019-12-18 16:52:34,143 DEBUG    root            Executing command: ['/usr/bin/python2', u'-S', u'/tools/google-cloud-sdk/lib/gcloud.py', u'components', u'post-process']
2019-12-18 16:52:34,968 DEBUG    ___FILE_ONLY___ Compiling platform/bq/third_party/yaml/lib3/__init__.py ...
  File "platform/bq/third_party/yaml/lib3/__init__.py", line 284
    class YAMLObject(metaclass=YAMLObjectMetaclass):
                              ^
SyntaxError: invalid syntax


2019-12-18 16:52:34,968 DEBUG    ___FILE_ONLY___ 
2019-12-18 16:52:35,145 INFO     ___FILE_ONLY___ 
Update done!


2019-12-18 16:52:35,150 INFO     root            Display format: "none"
